--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/x-date-pickers": "^6.18.5",
+    "axios": "^1.6.3",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-datetime-picker": "^5.6.0",
