--- a/backend/FormDriver/pyproject.toml
+++ b/backend/FormDriver/pyproject.toml
@@ -5,3 +5,18 @@ dependencies = [
     "selenium"
 ]
 requires-python = ">=3.10"
+[tool.poetry]
+name = "formdriver"
+version = "0.1.0"
+description = ""
+authors = ["iyasin <iayasin771@gmail.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.9"
+selenium = "^4.16.0"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
