--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.15.1",
     "@mui/x-date-pickers": "^6.18.5",
     "axios": "^1.6.3",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0"
   },
